# rsx-rover

./: ._BASE_1324.gitignore.swp  ._LOCAL_1324.gitignore.swp  ._REMOTE_1324.gitignore.swp  .gitignore  .gitignore.swp  CMakeLists.txt  PMT.txt  README.md  Temperatureandhumidity.txt  UTM  _BACKUP_1324.gitignore  delivery_lat_lon_goal.csv  delivery_lat_lon_goal.csv.save  ekf.launch  imu_to_enu.py  long_lat_goal.csv  move_group_python_interface_tutorial.py  moveit_joint_angle_publisher.py  package.xml  urc2024_guide.txt  urc_2024_lat_lon.csv  urc_2025_lat_lon.csv
_archive/: STATES_README.md
_archive/config/: sensors.rviz
_archive/docker/: docker_build.sh  rsx_docker_run.sh
_archive/launch/: demo.launch  imu_filter.launch  launch_manual_jetson.sh  rover.launch
_archive/scripts/: sub.py
_archive/srv/: AddGoal.srv
action/: ArucoScan.action
config/: cyclonedds_base.xml  cyclonedds_jetson.xml  fastdds_lan_only.xml  hunter2_zenoh.json5  mapper_params_online_async.yaml  nav2.rviz  zenoh_base.json5
docker/: Dockerfile  rsx_docker_run.sh  running_image_directions.md
gui/: gui.py  recordBag.py
launch/: amd_sci.launch  amd_sci.py  arm_joy.launch  arm_joy.py  base.launch  base_arm_tasks.launch  base_arm_tasks.py  base_auto.py  base_sci.launch  base_sci.py  ekf_gps.py  final_state_machine.launch  final_state_machine.py  groundseplaunch.py  joy.launch  joy.py  joy_new.launch  joy_software.launch  joy_software.py  launch_autonomy.launch  launch_autonomy_jetson.sh  launch_manual_base.sh  launch_manual_jetson.sh  manual_auto.launch  manual_auto.py  realsense.launch  realsense.py  rosbag_record.launch  rosbag_record.py  rover.launch  rover_amd.launch  rover_amd.py  rover_base.launch  rover_jetson.py  rs_multiple_devices.launch  rs_multiple_devices.py  science_gui.py  state_machine.py  testing_ros1to2_tool.py  tflaunch.py  (+2 more)
launch/_archive/: launch_autonomy.launch
msg/: ArmInputs.msg  MissionState.msg  StateMsg.msg  TransformMsg.msg  UnityCmd.msg
rover/arm/: README.md
rover/arm/config/: controllers.yaml  joint_limits.yaml
rover/arm/launch/: arm_2022_rviz.launch  arm_2023_complete.launch  arm_2023_gazebo.launch  arm_2023_gazebo_old.launch  arm_2023_rviz.launch  arm_assemble_pc.launch  arm_basics.launch  arm_controller_test.launch  arm_gazebo.launch  arm_point_cloud_test.launch  arm_rviz.launch  arm_sci.launch  arm_sci_rviz.launch  arm_urdf_testing.launch
rover/arm/nodes/: controller.py  manual.py
rover/arm/ros1/: arm_point_cloud_assembler.cpp  arm_trajectory_planning.py  dumb_moveit_interface.py  rsx_arm_hardware_interface.cpp
rover/arm/scripts/: GetManualJoystickFinal.py  MapManualJoystick.py  README.md  arm_angles.json  arm_can_control.py  arm_controller.py  arm_ik_and_viz.py  arm_inverse_kinematics.py  arm_js_control.py  arm_master_can.py  arm_master_control.py  arm_position_service.py  arm_ros_control.py  arm_servo.py  arm_servo_subprocces.py  arm_simulation_control.py  arm_trajectory_planning.py  arm_visualization.py  arm_viz.py  campublisher.py  controller.py  fake_manual.py  fuck_rev.sh  ik_library.py  listener_example.py  servo_code.ino  setup_can.bash  talker_example.py  test_servo.py
rover/arm/src/: arm_point_cloud_assembler.cpp  slave_base.ino
rover/autonomy/: DOCUMENTATION.md  README.md
rover/autonomy/config/: astar.rviz  astar.yaml  astar_cpp.rviz  base_local_planner.yaml  camera_config.rviz  costmap_common.yaml  dwa_planner.rviz  dwa_planner.yaml  global_costmap.yaml  gmapping.rviz  gmapping_params.yaml  groundsep_ouster_viz.rviz  hector_slam_occupancy_grid.rviz  local_costmap.yaml  move_base.rviz  move_base.yaml  (+4 more)
rover/drive/: README.md
rover/electrical/: receive_signal.py  receive_signal_pico.py  state_led.py  write_serial.py
rover/science/: README.md
rover/simulation/: CMakeLists.txt  package.xml
rover/vision/: CMakeLists.txt  package.xml
scripts/: CLI_Test.py  CesiumJS.py  Folium.py  Pygame.py  README.md  YoloV8.py  Yolov8_test.py  base_comms_check.py  cesium_map.html  cesium_test.html  cesiumtesting.html  check_zed.py  comms_check.py  data.yaml  datafinal.yaml  fakeGPSPub.py  fake_gps_publisher.py  gui.py  gui1.py  gui_pyqt.py  gui_pyqt_maptest.py  jetson_comms_check.py  kill_manual  label_sorting.py  lidar_integration.urdf  mallet.yaml  mallet_traing.py  manual_auto  manual_control  manual_control_service  manual_switch.py  map_test.html  map_viewer.py  map_viewer_test.py  nov16.yaml  object_detection_01.py  object_subscriber_Feb15.py  object_subscriber_node.py  pub.py  rosMapTest.py  (+24 more)
scripts/GUI/: arm_task_gui.py  elevation.json  elevation.py  elevation_downloader.py  fakeGPSPub.py  fakeStatusPub.py  globalPathPlanner.py  global_mercator.py  gui_pyqt.py  gui_pyqt_with_exposure.py  map_path_planner_node.py  map_viewer.py  map_viewer2.py  map_viewer_2_electric_boogaloo.py  map_viewer_display.py  path_segments_20251122_141117.csv  path_segments_20251122_142652.csv  path_segments_20260105_205815.csv  path_segments_20260105_213009.csv  path_segments_20260108_003905.csv  path_segments_20260207_150209.csv  path_segments_20260220_155419.csv  path_segments_20260412_162409.csv  path_segments_20260412_163256.csv  path_segments_20260417_204917.csv  permanent_obstacles_20251101_125158.csv  permanent_obstacles_20251113_212655.csv  permanent_obstacles_20251120_002938.csv  permanent_obstacles_20251122_124730.csv  permanent_obstacles_20260102_125050.csv  permanent_obstacles_20260207.csv  permanent_obstacles_20260207_135110.csv  permanent_obstacles_20260207_135448.csv  permanent_obstacles_20260207_135526.csv  permanent_obstacles_20260207_135537.csv  permanent_obstacles_20260207_140516.csv  permanent_obstacles_20260207_140534.csv  places_to_go.csv  points_to_traverse_20251113_212655.csv  requirements.txt  (+8 more)
scripts/map_output/: map.html  map_metadata.json
scripts/object_detection/: cv2_test.py  data.yaml  data_aug.py  data_split.py  fix_labelling.py  object_subscriber_node.py  upload_dataset.py
scripts/services/: rover.service
srv/: AddGoal.srv  Corrections.srv  GoToArmPos.srv  LightBeaconRotate.srv  SaveArmPos.srv
tutorial/: listener.py  talker.py
(+1169 files in other folders)
