<?xml version="1.0"?>
<package format="3">
  <name>rover</name>
  <version>2.0.0</version>
  <description>The Rover package</description>
  <maintainer email="richard@todo.todo">richard</maintainer>
  <license>TODO</license> 

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>          
  <depend>rclpy</depend>          
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>message_filters</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>